added console control to show progress of the number capture

--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,16 @@
                                 </div>
                             </div>
 
+
+                            <div class="ui icon green message">
+                                <i class="student icon"></i>
+                                <div class="content">
+                                    <p class="ConvertingNumber">123123123</p>
+                                    <p class="ConvertMethod">en binario es</p>
+                                    <p class="ConvertedNumber">10101010101</p>
+                                </div>
+                            </div>
+
                         </form>
                     </div>
                     <div class="extra content">
@@ -60,6 +70,43 @@
                                 Reiniciar
                             </button>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="ui vertical stripe quote segment">
+    <div class="ui equal width equal height stackable grid container">
+        <div class="center aligned row">
+            <div class="column">
+                <div class="ui centered card">
+                    <div class="content">
+                        <h1 class="header">Datos sobre este programa:</h1>
+
+                        <div class="ui icon grey message">
+                            <i class="github icon"></i>
+                            <div class="content">
+                                Repositorio Git: <a href="https://github.com/dauffretuip/metodos">Link</a>
+                            </div>
+                        </div>
+
+                        <div class="ui icon grey message">
+                            <i class="html5 icon"></i>
+                            <div class="content">
+                                HTML 5
+                            </div>
+                        </div>
+
+                        <div class="ui icon grey message">
+                            <i class="css3 icon"></i>
+                            <div class="content">
+                                CSS 3
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
