added check for int

--- a/src/index.html
+++ b/src/index.html
@@ -101,11 +101,10 @@
 
 
                     <div class="ui icon green message hidden resultado">
-                        <i class="student icon"></i>
                         <div class="content">
-                            <p class="ConvertingNumber">123123123</p>
-                            <p class="ConvertMethod">en binario es</p>
-                            <p class="ConvertedNumber">10101010101</p>
+                            <span class="ConvertingNumber"></span>
+                            <span class="ConvertMethod">en binario es</span>
+                            <span class="ConvertedNumber"></span>
                         </div>
                     </div>
 
