--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
 
                     <div class="ui icon green message hidden resultado">
                         <div class="content">
-                            <span class="ConvertingNumber"></span>
-                            <span class="ConvertMethod">en binario es</span>
+                            <span class="ConvertingNumber"></span> en
+                            <span class="ConvertMethod"></span> es
                             <span class="ConvertedNumber"></span>
                         </div>
                     </div>
