testing for negative binary to dec

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <form class="ui large form">
 
                         <div class="field">
-                            <input type="tel" id="numero" placeholder="Favor ingresar un número" autofocus>
+                            <input type="tel" id="numero" placeholder="Favor ingresar un número positivo" autofocus>
                         </div>
 
                     </form>
